style.css
@font-face {
  font-family: "Hack";
  src: url("ttf/Hack-Regular.ttf") format("truetype");
}

html, body {
  height: 100%;
  width: 100%;
  background-color: black;
  margin: 0;
  cursor: text;
}

* {
  font-family: "Hack", monospace;
  color: white;
  margin: 0;
  padding: 0;
}

#terminal {
  min-height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

#terminal > #text {
  height: fit-content;
  width: fit-content;
  display: flex;
  flex-direction: column;
}

#terminal > #text * {
  width: fit-content;
}

#terminal > #text > h1 {
  font-size: 2rem;
}

#terminal > #text > h2 {
  font-size: 1.5rem;
}

#terminal > #text > h3 {
  font-size: 1.3rem;
}

#terminal > #text > h4 {
  font-size: 1rem;
}

#terminal > #text > h5 {
  font-size: 0.8rem;
}

#terminal > #text > h6 {
  font-size: 0.7rem;
}

#terminal > #text > p {
  font-size: 1rem;
}

#terminal > #inputFlex {
  display: flex;
  height: fit-content;
  width: 100%;
  flex-direction: row;
}

#terminal > #inputFlex > #input {
  resize: none;
  overflow: hidden;
  font-size: 1rem;
  width: 100%;
  background-color: transparent;
  border: none;
  outline: none;
}

